Replaced SVGs and fixed placement of the drop shadow SVG on mobile

--- a/src/sass/mobile.scss
+++ b/src/sass/mobile.scss
@@ -55,7 +55,8 @@
           width: 800px;
           height: 800px;
           position: absolute;
-          top: -493px;
+          top: inherit;
+          bottom: 15px;
           left: 50%;
           transform: translateX(-50%);
           background-position: center bottom;
